# fpv-friendly-id-demo

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  HANDOFF.md  README.md  pyproject.toml
.cursor/rules/: main.mdc
.githooks/: post-checkout  post-merge
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/public/: feeds.json  mission_manifest.json
dashboard/src/: App.tsx  styles.css  types.ts
demo_assets/: README.md  friendly_overrides.json  mission_manifest.json  session_log.json  visual_profile_overrides.json
demo_assets/sample_frames/: README.md
docs/: acceptance_checklist.md  bluemark_fpv_unified.md  cost_tiers.md  dashboard_states.md  demo_plan.md  demo_script.md  demo_storyboard.md  firmware_simulation.md  fusion_architecture.md  judge_faq.md  judge_qa_practice.md  problem_statement.md  steganographic_iff.md  system_architecture.md
firmware/: README.md
firmware/wokwi/: README.md  diagram.json  sketch.ino  wokwi.toml
scripts/: README.md  generate_feeds.py  run_visual_classifier.py  verify_firmware_marker.py
src/: README.md
src/bluemark/: __init__.py  fusion.py  marker.py  schemas.py
team/: README.md  interview_template.md  work_allocation.md
team/arpit/: changelog.md  suggestions.md
team/birger/: changelog.md  suggestions.md
team/interview_results/: README.md
team/nicholas/: birger_email_questions.md  birger_responses_2026-05-03.md  birger_urgent_questions.md  changelog.md  meeting_2026-05-02.md  onboarding.md  risk_register.md  (+1 more)
tests/: test_firmware_compat.py  test_fusion.py
(+11 files in other folders)
